# office

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.ko.md  README.md  extraction-tench-office.md
apps/docs/src-tauri/: Cargo.toml  tauri.conf.json
apps/docs/src-tauri/capabilities/: default.json
apps/docs/src-tauri/frontend/: index.html
apps/docs/src-tauri/src/: ai.rs  commands.rs  config.rs  document_service.rs  lib.rs  main.rs
apps/docs/src-tauri/src/ui/: automation.rs  automation_document.rs  automation_dropdown.rs  automation_helpers.rs  automation_sidebar.rs  automation_status.rs  automation_version_history.rs  chrome.rs  clipboard.rs  dispatch.rs  document.rs  document_text.rs  events.rs  file_actions.rs  find_replace.rs  hit_testing.rs  menu_bar.rs  mod.rs  modals.rs  page_setup.rs  panels.rs  popovers.rs  ruler.rs  tabs.rs  (+4 more)
apps/docs/src-tauri/tests/: automatic_behaviors_ui_e2e.rs  capture_screenshots.rs  comments_panel_ui_e2e.rs  context_menu_ui_e2e.rs  document_interactions_ui_e2e.rs  dropdown_items_ui_e2e.rs  edit_menu_button_ui_e2e.rs  edit_menu_items_ui_e2e.rs  file_menu_button_ui_e2e.rs  file_menu_items_ui_e2e.rs  find_replace_controls_ui_e2e.rs  format_menu_items_ui_e2e.rs  goto_controls_ui_e2e.rs  header_footer_ui_e2e.rs  insert_menu_items_ui_e2e.rs  menu_buttons_ui_e2e.rs  modal_controls_ui_e2e.rs  print_preview_controls_ui_e2e.rs  ruler_handles_ui_e2e.rs  sidebar_tab_ui_e2e.rs  tab_system_ui_e2e.rs  thumbnail_ui_e2e.rs  toggle_buttons_ui_e2e.rs  toolbar_buttons_ui_e2e.rs  tools_help_menu_items_ui_e2e.rs  view_menu_items_ui_e2e.rs  window_controls_ui_e2e.rs
apps/kodocs/src-tauri/: Cargo.toml  tauri.conf.json
apps/kodocs/src-tauri/capabilities/: default.json
apps/kodocs/src-tauri/src/: commands.rs  config.rs  document_service.rs  lib.rs  main.rs  session.rs
apps/kodocs/src-tauri/tests/: automatic_behaviors_ui_e2e.rs  capture_screenshots.rs  color_palette_ui_e2e.rs  context_menu_and_modals_ui_e2e.rs  document_interactions_ui_e2e.rs  dropdown_items_ui_e2e.rs  edit_menu_items_ui_e2e.rs  equation_editor_ui_e2e.rs  file_menu_button_ui_e2e.rs  file_menu_items_ui_e2e.rs  format_menu_items_ui_e2e.rs  hanja_popup_ui_e2e.rs  insert_menu_items_ui_e2e.rs  menu_buttons_ui_e2e.rs  ruler_ui_e2e.rs  side_panel_ui_e2e.rs  status_bar_ui_e2e.rs  tab_bar_ui_e2e.rs  table_grid_ui_e2e.rs  toggle_buttons_ui_e2e.rs  toolbar_buttons_ui_e2e.rs  tools_help_menu_items_ui_e2e.rs  view_menu_items_ui_e2e.rs
crates/document-core/: Cargo.toml
crates/document-core/src/: document.rs  engine.rs  lib.rs  office.rs
crates/document-core/src/engine/: clipboard.rs  comments.rs  editing.rs  helpers.rs  search.rs  tests.rs  tracking.rs
crates/document-core/src/tdm/: attrs.rs  block.rs  image.rs  inline.rs  metadata.rs  mod.rs
crates/document-core/tests/: public_api.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: adapter.rs  cache.rs  config.rs  hardware.rs  health.rs  http_compat.rs  keys.rs  lib.rs  logger.rs  native_provider.rs  office_ai.rs  params.rs  product_config.rs  queue.rs  registry.rs  retry.rs  router.rs  sessions.rs  status.rs  tasks.rs  templates.rs  tests.rs  tokens.rs  tools.rs  traits.rs  transports.rs  util.rs  versions.rs  wire.rs
crates/engine-core/src/providers/: cloud.rs  llama_cpp.rs  mock.rs  mod.rs  ollama.rs  ollama_codec.rs  openai.rs  openai_compat.rs
crates/engine-core/src/transports/: http_compat.rs  local_ipc.rs  mock.rs  remote_http.rs  stream.rs
crates/fs-core/: Cargo.toml
crates/fs-core/src/: lib.rs
crates/hwp-io/: Cargo.toml
crates/hwp-io/src/: bin_data.rs  body_text.rs  cfb.rs  char_shape.rs  controls.rs  doc_info.rs  error.rs  header.rs  hwp_to_tdm.rs  lib.rs  para_shape.rs  record.rs  tdm_to_hwp.rs
crates/hwp-io/src/hwpx/: mod.rs  reader.rs  writer.rs
crates/license-store/: Cargo.toml
crates/license-store/src/: device_id.rs  error.rs  lib.rs  pc_code.rs  store.rs
crates/license-store/tests/: store_unit.rs
crates/office-io/: Cargo.toml
crates/office-io/src/: backup.rs  config_io.rs  diagnostic.rs  error.rs  file_util.rs  lib.rs  office_file.rs  recent_files.rs  recovery.rs  watcher.rs  xml_util.rs  zip_util.rs
crates/office-io/src/docs/: docx.rs  epub.rs  format.rs  mod.rs  odt.rs  pdf.rs  rtf.rs
crates/office-io/src/sheets/: csv.rs  format.rs  html.rs  mod.rs  ods.rs  pdf.rs  xlsx.rs
crates/office-io/src/slides/: format.rs  mod.rs  odp.rs  pptx.rs
crates/office-io/tests/: public_api.rs
crates/office-runtime/: Cargo.toml
crates/office-runtime/src/: lib.rs
crates/office-runtime/src/dispatch/: docs.rs  mod.rs  sheets.rs  slides.rs
crates/storage-core/: Cargo.toml
crates/storage-core/src/: encryption.rs  lib.rs  paths.rs  policy.rs  safe_id.rs
crates/tench-ui/: Cargo.toml
crates/tench-ui-test/: Cargo.toml
crates/tench-ui-test/src/: accessibility.rs  assertions.rs  automation.rs  component.rs  events.rs  harness.rs  lib.rs  snapshot.rs  test_helpers.rs
crates/tench-ui/examples/: hello.rs
crates/tench-ui/src/: anim.rs  lib.rs
crates/tench-ui/src/core/: events.rs  mod.rs  types.rs  widget.rs
crates/tench-ui/src/layout/: flexbox.rs  mod.rs
crates/tench-ui/src/platform/: mod.rs  native.rs  tauri.rs  tray.rs  updater.rs
crates/tench-ui/src/render/: image_cache.rs  mod.rs  painter.rs
crates/tench-ui/src/text/: mod.rs
crates/tench-ui/src/theme/: mod.rs
crates/tench-ui/src/widgets/: app_grid.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  canvas.rs  card.rs  chat_bubble.rs  checkbox.rs  color_picker.rs  context_menu.rs  data_grid.rs  drawer.rs  dropdown.rs  flex.rs  grid.rs  image.rs  label.rs  menu_bar.rs  mod.rs  modal.rs  pdf_surface.rs  portal.rs  progress_bar.rs  radio_group.rs  ruler.rs  scrollable_list.rs  scrollbar.rs  seek_bar.rs  separator.rs  sized_box.rs  slider.rs  spinner.rs  split.rs  table.rs  tabs.rs  text_area.rs  text_input.rs  toast.rs  toggle.rs  (+6 more)
crates/ui-automation-core/: Cargo.toml
crates/ui-automation-core/src/: lib.rs
crates/update-client/: Cargo.toml
crates/update-client/src/: activation.rs  detect.rs  error.rs  lib.rs  manifest.rs  verify.rs
(+267 files in other folders)
