[workspace]
members = [
  "apps/docs/src-tauri",
  "apps/sheets/src-tauri",
  "apps/slides/src-tauri",
  "apps/kodocs/src-tauri",
  "crates/tench-ui",
  "crates/ui-automation-core",
  "crates/tench-ui-test",
  "crates/shared-types",
  "crates/storage-core",
  "crates/fs-core",
  "crates/document-core",
  "crates/engine-core",
  "crates/engine-native",
  "crates/office-io",
  "crates/office-runtime",
  "crates/hwp-io",
  "crates/sheets-core",
  "crates/license-store",
  "crates/update-client",
  "tools/architecture-guard",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Tench"]

[workspace.dependencies]
# External dependencies used by workspace members
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
regex = { version = "1" }
toml = { version = "0.8" }
ureq = { version = "2", features = ["json"] }
dirs = { version = "6" }
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-shell = { version = "2" }
zip = { version = "8.6", default-features = false, features = ["deflate"] }
getrandom = { version = "0.3" }
aes-gcm = { version = "0.10" }
sha2 = { version = "0.10" }
base64 = { version = "0.22" }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "tga", "tiff", "webp"] }
pollster = { version = "0.4" }
windows-sys = { version = "0.59", features = ["Win32_System_Registry", "Win32_Foundation"] }
tauri-plugin-updater = { version = "2" }

# Internal crates
tench-ui = { path = "crates/tench-ui" }
tench-ui-automation-core = { path = "crates/ui-automation-core" }
tench-ui-test = { path = "crates/tench-ui-test" }
tench-shared-types = { path = "crates/shared-types" }
tench-storage-core = { path = "crates/storage-core" }
tench-fs-core = { path = "crates/fs-core" }
tench-document-core = { path = "crates/document-core" }
tench-engine-core = { path = "crates/engine-core" }
tench-engine-native = { path = "crates/engine-native" }
tench-office-io = { path = "crates/office-io" }
tench-office-runtime = { path = "crates/office-runtime" }
tench-hwp-io = { path = "crates/hwp-io" }
tench-sheets-core = { path = "crates/sheets-core" }
tench-license-store = { path = "crates/license-store" }
tench-update-client = { path = "crates/update-client" }
