[package]
name = "tench-document-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared Tench document, annotation, note, and content primitives"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
