[package]
name = "tench-engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared Tench engine routing and status prototype"

[dependencies]
dirs.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tench-engine-native.workspace = true
tench-shared-types.workspace = true
toml.workspace = true
ureq.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
base64.workspace = true
getrandom.workspace = true
