[package]
name = "tench-fs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared Tench local file, folder, permission, and workspace primitives"

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
