[package]
name = "tench-hwp-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HWP/HWPX file format parser and writer for Tench"

[dependencies]
tench-document-core.workspace = true
cfb = "0.11"
flate2 = "1"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "8", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "2"
