[package]
name = "tench-license-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local encrypted credential store and device identifier derivation for Tench desktop apps"

[dependencies]
tench-storage-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
getrandom.workspace = true
dirs.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tempfile = { version = "3" }
