[package]
name = "tench-storage-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared Tench local-first storage, cache, and data-boundary contracts"

[dependencies]
getrandom.workspace = true
serde.workspace = true
aes-gcm.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
