[package]
name = "tench-update-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "License-aware wrapper around tauri-plugin-updater for Tench desktop apps"

[dependencies]
tench-license-store.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
ureq.workspace = true
