[package]
name = "tench-docs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tench Docs desktop app"

[lib]
name = "tench_docs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-updater.workspace = true
tench-document-core.workspace = true
tench-engine-core.workspace = true
tench-fs-core.workspace = true
tench-license-store.workspace = true
tench-office-io.workspace = true
tench-shared-types.workspace = true
tench-storage-core.workspace = true
tench-office-runtime.workspace = true
tench-ui = { workspace = true, features = ["tauri"] }
tench-update-client.workspace = true

[dev-dependencies]
tench-ui-test.workspace = true
tench-ui-automation-core.workspace = true
image = { workspace = true }
